Añadido metodo buscarSocio por nombre